<resources>
    <string name="app_name">EstagiA</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Cadastrar</string>
    <string name="ra_cpf_label">R.A. ou CPF</string>
    <string name="password_label">Senha</string>
    <string name="name_label">Nome completo</string>
    <string name="ra_label">R.A.</string>
    <string name="email_label">Email - exemplo@dominio.com</string>
    <string name="password_confirmation_label">Confirme sua senha</string>
    <string name="bcc_radio">BCC</string>
    <string name="enc_radio">EnC</string>
    <string name="send_request_button">Enviar solicitação</string>
    <string name="recover_password_button">Recuperar senha</string>
    <string name="forgot_password_label"><u>Esqueceu sua senha?</u></string>
    <string name="my_profile_item">Meu perfil</string>
    <string name="opportunities_item">Oportunidades</string>
    <string name="opportunities_label"><b>Oportunidades inscritas</b></string>
    <string name="profile_info_label"><b>Informações de perfil</b></string>
    <string name="events_label"><b>Eventos inscritos</b></string>
    <string name="events_item">Eventos</string>
    <string name="student_dashboard_item">Minha dashboard</string>
    <string name="exit_item">Sair</string>
    <string name="Galeria">Adicionar imagem</string>
    <string name="google_info">Google\'s software engineers develop the next-generation technologies that change how billions of users connect, explore, and interact with information and one another. Our products need to handle information at massive scale, and extend well beyond web search. We\'re looking for engineers who bring fresh ideas from all areas, including information retrieval, distributed computing, large-scale system design, networking and data storage, security, artificial intelligence, natural language processing, UI design and mobile; the list goes on and is growing every day. As a software engineer, you will work on a specific project critical to Google’s needs with opportunities to switch teams and projects as you and our fast-paced business grow and evolve. We need our engineers to be versatile, display leadership qualities and be enthusiastic to take on new problems across the full-stack as we continue to push technology forward.
        As a key member of a small and versatile team, you design, test, deploy and maintain software solutions.
    </string>
    <string name="spotify_info">Internships at Spotify are anything but conventional. You won’t be making tea, picking up packages or taking minutes. You’ll be right at the heart of major projects, working with teams of passionate people to create the next awesome thing.

Whatever you’re studying, we have all kinds of internships to suit you – summer, thesis, academic and co-op. Take your pick.

Or, if you’ve just finished your studies, keep checking here to find grad and trainee opportunities.</string>
</resources>
